--- a/src/main/resources/valkyrien_dependency_manifest.json
+++ b/src/main/resources/valkyrien_dependency_manifest.json
@@ -1,18 +1,10 @@
 [
   {
     "loader": "fabric",
-    "name": "(modId)",
-    "downloadUrl": "https://maven.valkyrienskies.org/curse/maven/(modId)-(projectId)/(fileId)/(modId)-(projectId)-(fileId).jar",
-    "modId": "(modId)",
-    "versionRange": ">=1.0",
-    "optional": true
-  },
-  {
-    "loader": "fabric",
-    "name": "architectury",
-    "downloadUrl": "https://maven.valkyrienskies.org/curse/maven/architectury-419699/3857643/architectury-419699-3857643.jar",
+    "name": "Architectury",
     "modId": "architectury",
     "versionRange": ">=1.32.66",
-    "optional": false
+    "optional": false,
+    "downloadUrl": "https://maven.valkyrienskies.org/curse/maven/architectury-419699/3857642/architectury-419699-3857642.jar"
   }
 ]
